# larry_ai

./: .gitignore  README.md  main.py  ollama_chat.html  proxy_server.py  pyproject.toml
agents/: agent.py  prompt.py
chat_app/: README.md  ollama_chat.html  proxy_server.py  pyproject.toml
chat_app/agent/: agent.py
server/: aiohttp_server.py  proxy_server.py  request_handler.py  server.py
server/public/: ollama_chat.html
server/static/: agent_ui.html
